--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,53 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+
+<html>
+  <body>
+    <textarea  id="inputText"  placeholder="add value here" name="english" ></textarea>
+      
+    <div><button id="tButton">
+      "click me"
+           </button></div>
+          
+       
+   
+<textarea id="outputText"  name="pigLatin"></textarea>
+         
+       
+   </body>
+       
+     
+     <script >
+     function translate(str){
+  let sentance = str.split(' ');
+  let result = [];  
+
+  for(let word of sentance)
+  {
+    if((/[aeiou]/).test(word[0])){
+      result.push(word + "way");
+    }
+    else{
+      result.push(word.substring(1) + word[0]+ "ay");
+    }
+  }
+  return result.join(" ");
+}
+
+console.log(translate('pig'));
+  console.log(translate('eat'));
+  console.log(translate('eat banana'));
+  console.log(translate('album with auther'));
+  
+
+  
+    var tButton = document.getElementById('tButton');
+   tButton.onclick = function () {
+     var inputText = document.getElementById('inputText').value;
+     var outputText = document.getElementById('outputText').value = translate(inputText);
+   };
+   
+  
+   
+   
+   </script>
+   </body>
+</html>
